--- a/index.html
+++ b/index.html
@@ -7,28 +7,78 @@
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css" />
 
+      <link type="text/css" rel="stylesheet" href="css/style.css" />
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
+
     <body>
 
-      <div class="row">
-        <div class="col s1">1</div>
-        <div class="col s1">2</div>
-        <div class="col s1">3</div>
-        <div class="col s1">4</div>
-        <div class="col s1">5</div>
-        <div class="col s1">6</div>
-        <div class="col s1">7</div>
-        <div class="col s1">8</div>
-        <div class="col s1">9</div>
-        <div class="col s1">10</div>
-        <div class="col s1">11</div>
-        <div class="col s1">12</div>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">Home</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">A link</a></li>
+        <li><a href="#">A link</a></li>
+       <li><a href="#">A link</a></li>
+      </ul>
+    </div>
+  </nav>
+
+
+<!--   <div class="parallax-container">
+    <div class="parallax"><img src="dog.jpg"></div>
+  </div>
+
+      <div class="section white">
+        <div class="row container">
+          <h2 class="header">Parallax</h2>
+          <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+        </div>
       </div>
 
+  <div class="parallax-container">
+    <div class="parallax"><img src="background.jpg"></div>
+  </div>
+ -->
 
+      <div class="row" id= "row1" >
+        <div class="col s12 ">
+          <div class="card green darken-1">
+            <div class="card-content white-text">
+              <span class="card-title">Search</span>
+              <p>google search section</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 ">
+          <div class="card blue darken-1">
+            <div class="card-content white-text">
+              <span class="card-title">Youtube</span>
+              <p>videos</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+       <div class="row">
+        <div class="col s12 ">
+          <div class="card red darken-1">
+            <div class="card-content white-text">
+              <span class="card-title">Coding Bootcamps</span>
+              <p>List of them w/reviews</p>
+              <p>Google map</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
