--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-   <!DOCTYPE html>
+<!DOCTYPE html>
   <html>
     <head>
       <!--Import Google Icon Font-->
@@ -17,7 +16,7 @@
 
   <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Home</a>
+      <a href="#!" class="brand-logo"> Home</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">A link</a></li>
         <li><a href="#">A link</a></li>
@@ -26,64 +25,38 @@
     </div>
   </nav>
 
-
-<!--   <div class="parallax-container">
-    <div class="parallax"><img src="dog.jpg"></div>
-  </div>
-
-      <div class="section white">
-        <div class="row container">
-          <h2 class="header">Parallax</h2>
-          <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
-        </div>
-      </div>
-
-  <div class="parallax-container">
-    <div class="parallax"><img src="background.jpg"></div>
-  </div>
- -->
-
-      <div class="row" id= "row1" >
-        <div class="col s12 ">
-          <div class="card green darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Search</span>
-              <p>google search section</p>
-            </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-            </div>
+<!-- parallax effect -->
+    <div class="parallax-container">
+          <div class="parallax">
+              <img src="https://www.ibm.com/developerworks/community/blogs/worklight/resource/BLOGS_UPLOADED_IMAGES/01.CustomJSBefore.png" />
           </div>
-        </div>
-      </div>
+    </div>
 
-      <div class="row">
-        <div class="col s12 ">
-          <div class="card blue darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Youtube</span>
-              <p>videos</p>
-            </div>
-          </div>
-        </div>
-      </div>
+    <h1>Aaaaaaa</h1>
+    <h1>Bbbbbbb</h1>
+    <h1>Ccccccc</h1>
 
-       <div class="row">
-        <div class="col s12 ">
-          <div class="card red darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Coding Bootcamps</span>
-              <p>List of them w/reviews</p>
-              <p>Google map</p>
-            </div>
+    <div class="parallax-container">
+          <div class="parallax">
+              <img src="https://www.ibm.com/developerworks/community/blogs/worklight/resource/BLOGS_UPLOADED_IMAGES/01.CustomJSBefore.png" />
           </div>
-        </div>
-      </div>
+    </div>
+
+    <h1>Aaaaaaa</h1>
+    <h1>Bbbbbbb</h1>
+    <h1>Ccccccc</h1>
+
+    <div class="parallax-container">
+          <div class="parallax">
+              <img src="https://www.ibm.com/developerworks/community/blogs/worklight/resource/BLOGS_UPLOADED_IMAGES/01.CustomJSBefore.png" />
+          </div>
+    </div>
 
 
 
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
+      <script type="text/javascript" src="css/js/materialize.min.js"></script>
+      <script type="text/javascript" src="script.js"></script>
     </body>
   </html>
