added google maps

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
   <html>
     <head>
+    <title>Javascript</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="initial-scale=1.0">
       <!--Import Google Icon Font-->
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
@@ -11,9 +14,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
+<body>
 
-    <body>
-
+<!-- creates the navagation bar -->
   <nav>
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo"> Home</a>
@@ -28,35 +31,55 @@
 <!-- parallax effect -->
     <div class="parallax-container">
           <div class="parallax">
-              <img src="https://www.ibm.com/developerworks/community/blogs/worklight/resource/BLOGS_UPLOADED_IMAGES/01.CustomJSBefore.png" />
+              <img src="http://manaskriti.com/images/jscript.png" id= "codeImage" />
           </div>
     </div>
 
-    <h1>Aaaaaaa</h1>
-    <h1>Bbbbbbb</h1>
-    <h1>Ccccccc</h1>
+          <div class="row">
+              <div class="col s12 m5">
+                <div class="card-panel teal">
+                  <span class="white-text">
+                    <h1>Aaaaaaa</h1>
+                    <h1>Bbbbbbb</h1>
+                    <h1>Ccccccc</h1>
+                  </span>
+                </div>
+              </div>
+          </div>
 
     <div class="parallax-container">
           <div class="parallax">
-              <img src="https://www.ibm.com/developerworks/community/blogs/worklight/resource/BLOGS_UPLOADED_IMAGES/01.CustomJSBefore.png" />
+              <img src="http://manaskriti.com/images/jscript.png" id= "codeImage" />
           </div>
     </div>
 
-    <h1>Aaaaaaa</h1>
-    <h1>Bbbbbbb</h1>
-    <h1>Ccccccc</h1>
+          <div class="row">
+              <h1>Aaaaaaa</h1>
+              <h1>Bbbbbbb</h1>
+              <h1>Ccccccc</h1>
+          </div>
 
     <div class="parallax-container">
           <div class="parallax">
-              <img src="https://www.ibm.com/developerworks/community/blogs/worklight/resource/BLOGS_UPLOADED_IMAGES/01.CustomJSBefore.png" />
+              <img src="http://manaskriti.com/images/jscript.png" id= "codeImage" />
           </div>
     </div>
 
+        <div class="row">
+            <h1>Aaaaaaa</h1>
+            <h1>Bbbbbbb</h1>
+            <h1>Ccccccc</h1>
+        </div>
 
+    <div id="map"></div>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSVZ6NLbN56qrReRGN7czA9m9y3CrMmjs&callback=initMap"
+    async defer></script>
 
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="css/js/materialize.min.js"></script>
       <script type="text/javascript" src="script.js"></script>
+
     </body>
   </html>
