--- a/index.html
+++ b/index.html
@@ -66,15 +66,14 @@
     </div>
 
         <div class="row">
-            <h1>Aaaaaaa</h1>
-            <h1>Bbbbbbb</h1>
-            <h1>Ccccccc</h1>
+            <h1>Coding Schools</h1>
         </div>
 
     <div id="map"></div>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSVZ6NLbN56qrReRGN7czA9m9y3CrMmjs&callback=initMap"
-    async defer></script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSVZ6NLbN56qrReRGN7czA9m9y3CrMmjs&callback=initMap">
+    </script>
 
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
