--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
 
         <div class="row">
-            <h1>Coding Schools</h1>
+            <h2>Coding Bootcamps</h2>
         </div>
 
     <div id="map"></div>
