--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
           <div class="row">
-              <div class="col s12 m5">
+              <div class="col s12">
                 <div class="card-panel teal">
                   <span class="white-text">
                     <h1>Aaaaaaa</h1>
