javascript fixes, added Rey's podcasts, css changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-    <title>Javascript</title>
+    <title>Script Javascript</title>
       <meta charset="utf-8">
       <meta name="viewport" content="initial-scale=1.0">
       <!--Import Google Icon Font-->
@@ -31,22 +31,7 @@
   </nav>
 </header>
 
-
 <body>
-
-<!-- creates the navagation bar -->
-<nav>
-  <div class="nav-wrapper">
-    <a href="#!" class="brand-logo"> Home</a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="#">A link</a></li>
-      <li><a href="#">A link</a></li>
-     <li><a href="#">A link</a></li>
-    </ul>
-  </div>
-</nav>
-
-
 <!-- parallax effect -->
 <div class="parallax-container">
     <div class="parallax">
@@ -72,7 +57,8 @@
 </div>
 
 <div class="row" id= "secondSection">
-  <h1>Youtube video</h1>   
+  <h1>Podcasts</h1> 
+    <div id='show'></div>
 </div>
 
 <div class="parallax-container">
@@ -83,6 +69,7 @@
 
 <div class="row" id= "bootcamps" >
   <h2>Coding Bootcamps</h2>
+  <p>If you're having trouble learning on your own, maybe it's time to try a coding bootcamp. Coding bootcamps are a great way to learn to code. It you feel you need a more structured path in order to learn, try one of the coding bootcamps listed below!</p>
 
   <div id="map"></div>
 
@@ -156,17 +143,15 @@
 
 <!-- script for Google maps API -->
 <script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSVZ6NLbN56qrReRGN7czA9m9y3CrMmjs&callback=initMap">
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSVZ6NLbN56qrReRGN7czA9m9y3CrMmjs">
 </script>
 
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="css/js/materialize.min.js"></script>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="javascript/script.js"></script>
 
 </body>
-
-
 
 
 </html>
