--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
       <meta charset="utf-8">
       <meta name="viewport" content="initial-scale=1.0">
       <!--Import Google Icon Font-->
+      <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script> 
       <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css" />
-
+      <!--Import Ken Wheeler slick-->
+      <link rel="stylesheet" type="text/css" href="css/slick.css"/>
+      <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
       <link type="text/css" rel="stylesheet" href="css/style.css" />
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -56,9 +59,16 @@
   </div>
 </div>
 
-<div class="row" id= "secondSection">
-  <h1>Podcasts</h1> 
-    <div id='show'></div>
+<div class="row" id="YTsection"></div>
+
+<div class="parallax-container">
+  <div class="parallax">
+      <img src="http://manaskriti.com/images/jscript.png" id= "codeImage" />
+  </div>
+</div>
+
+<div class="autoplay" id="Podsection">
+  
 </div>
 
 <div class="parallax-container">
@@ -67,7 +77,7 @@
   </div>
 </div>
 
-<div class="row" id= "bootcamps" >
+<div class="row" id="bootcamps" >
   <h2>Coding Bootcamps</h2>
   <p>If you're having trouble learning on your own, maybe it's time to try a coding bootcamp. Coding bootcamps are a great way to learn to code. It you feel you need a more structured path in order to learn, try one of the coding bootcamps listed below!</p>
 
@@ -150,6 +160,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSVZ6NLbN56qrReRGN7czA9m9
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="css/js/materialize.min.js"></script>
 <script type="text/javascript" src="javascript/script.js"></script>
+<script type="text/javascript" src="javascript/slick.min.js"></script>
 
 </body>
 
