--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0">
     <!-- script for Google maps API -->
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSVZ6NLbN56qrReRGN7czA9m9y3CrMmjs"></script>
+    <script async decd rcb-pc
+    fer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSVZ6NLbN56qrReRGN7czA9m9y3CrMmjs&callback=initMap"></script>
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -73,7 +74,11 @@
 <div id="secondSection">
   <h2>Youtube</h2>
     <p>These youtube videos are a good way to get started learning Javascript. They cover some of the basics of this programming language.</p>
-  <div class="row" id="YTsection"></div>
+  <div class="YTrow" id="YTsection"></div>
+   <p>
+    <button id='prev'>Prev</button>    
+    <button id='next'>Next</button>
+  </p>
 </div>
 
 <div class="parallax-container">
